--- a/src/index.css
+++ b/src/index.css
@@ -115,9 +115,9 @@
     @apply bg-gradient-to-br from-gray-500 via-gray-200 to-white;
   }
 
-  .gradient-title{
-    @apply gradient text-transparent bg-clip-text;
-  }
+  .gradient-title {
+    @apply bg-gradient-to-br from-gray-500 via-gray-200 to-white text-transparent bg-clip-text;
+  }  
 }
 
 @layer base {
